compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test16.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "fn go(x xx, y yy) { xx }\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([x/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec go(I, any()) -> I.
go(Xx, Yy) ->
    Xx.

-file("/root/project/test/my/mod.rakun", 2).
-spec x() -> integer().
x() ->
    go(1, 2),
    go(4, 3).
