compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test17.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 293
expression: "\nrecord User { User(id: Int, name: String, age: Int) }\nfn create_user(user_id) { User(age: 22, id: user_id, name: \"\") }\n                    "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([user/0]).

-type user() :: {user, integer(), binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 3).
-spec create_user(integer()) -> user().
create_user(User_id) ->
    {user, User_id, <<""/utf8>>, 22}.
