compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn second(list) { case list { [x, y] -> y z -> 1 } }\npub fn tail(list) { case list { [x, ..xs] -> xs z -> list } }\n            "
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([second/1, tail/1]).

-file("/root/project/test/my/mod.rakun", 1).
-spec second(list(integer())) -> integer().
second(List) ->
    case List of
        [X, Y] ->
            Y;

        Z ->
            1
    end.

-file("/root/project/test/my/mod.rakun", 2).
-spec tail(list(P)) -> list(P).
tail(List) ->
    case List of
        [X | Xs] ->
            Xs;

        Z ->
            List
    end.
