compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test22.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn factory(f, i) {\n  f(i)\n}\n\npub record Box {\n  Box(i: Int)\n}\n\npub fn main() {\n  factory(Box, 0)\n}\n"
---
----- SOURCE CODE

pub fn factory(f, i) {
  f(i)
}

pub record Box {
  Box(i: Int)
}

pub fn main() {
  factory(Box, 0)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([factory/2, main/0]).
-export_type([box/0]).

-type box() :: {box, integer()}.

-file("/root/project/test/my/mod.rakun", 2).
-spec factory(fun((J) -> N), J) -> N.
factory(F, I) ->
    F(I).

-file("/root/project/test/my/mod.rakun", 10).
-spec main() -> box().
main() ->
    factory(fun(Field@0) -> {box, Field@0} end, 0).
